website/app/style-3.css
/* ... */
.fa.fa-check.available {
  color: green;
  padding-right: 10px;
}

.fa.fa-times.notavailable {
  color: red;
  padding-right: 10px;
}

/************End samples.html **************************/
/************Begin dataedit.html **************************/
.fa.fa-expand.space-right {
  padding-right: 5px;
}

.fa.fa-download.space-right {
  padding-right: 5px;
}

.image-space-left {
  padding-left: 25px;
}

/************End dataedit.html **************************/
/************Begin provenance.html **************************/
.no-pointer {
  cursor: text;
}

/************End provenance.html **************************/
/************Begin iterate properties.html **************************/
.no-style {
  list-style: none;
}

/************End iterate properties.html **************************/

/************Begin projecttree.html **************************/
.fa.fa-folder.trailspace {
  padding-left: 2px;
  padding-right: 3px;
}

.fa.fa-code-fork.space-right {
  padding-right: 3px;
}

span {
  color: black;
}

a.prov-link {
  padding-right: 15px;
  color: black;
}

.fa.fa-file.space-right {
  padding-right: 5px;
}

.fa.fa-folder.space-right {
  padding-right: 5px;
}

td.tag-width {
  width: 5px;
}

.checkbox-margin {
  margin-top: -5px;
  margin-left: 8px;
}

.project-tree td span.checkbox-inline {
  padding-left: 0;
}

.no-checkbox-space {
  content: ' ';
  padding-left: 24px;
}

.project-tree td span.checkbox-inline label {
  margin-right: 0;
  margin-bottom: 8px;
}

/************End projecttree.html **************************/
/************Begin index.html *****************************/

.nav-dropdown-scrollbar {
  height: 500px;
  overflow-y: auto;
}

.navbar-custom {
  /* background-color: #0C5C86; */
  /* background-color: #204d65; */
  /* background-color: #4a7a93; */
  background-color: #4e869f;
  color: #ffffff;
  border-radius: 0;
  padding-top: 0px;
  padding-bottom: 0px;
}

.navbar-custom .navbar-nav > li > a {
  padding-left: 20px;
  padding-right: 20px;
  line-height: 40px;
  height: 40px;
  padding-top: 0;
  color: #ffffff;
}

.navbar-custom .navbar-nav > li > a:hover, .nav > li > a:focus {
  text-decoration: none;
  background-color: #002953;
}

.navactive {
  text-decoration: none;
  background-color: #002953;
}

.navbar-custom .navbar-brand {
  color: #eeeeee;
  line-height: 40px;
  height: 40px;
  padding-top: 0;
}

.navbar.navbar-custom > .navbar-header > .navbar-brand {
  color: #FDDF5B;
  font-size: 14pt;
  font-weight: 400;
}

.navbar-custom .navbar-toggle {
  background-color: #eeeeee;
}

.navbar-custom .icon-bar {
  background-color: #0C5C86;
}

.navbar {
  margin-bottom: 2px;
  min-height: 15px !important;
}

.fa.fa-briefcase.space-right {
  padding-right: 5px;
}

.fa.fa-comment.space-right {
  padding-right: 5px;
}

.fa.fa-gears.space-right {
  padding-right: 5px;
}

.fa.fa-user.space-right {
  padding-right: 5px;
}

.dropdown.divider {
  border-left: 1px solid lightgray;
}

.fa.fa-unlock-alt.space-right {
  padding-right: 5px;
}

.fa.fa-list-alt.space-right {
  padding-right: 5px;
}

.fa.fa-key.space-right {
  padding-right: 5px;
}

.fa.fa-sign-out.space-right {
  padding-right: 5px;
}

.reviews-dropdown {
  min-width: 450px;
  font-size: 13px;
  color: darkgray;

}

/*For the tip in the dropdown menu*/
.navbar .nav > li > .dropdown-menu:before {
  border-bottom: 7px solid rgba(0, 0, 0, 0.2);
  border-left: 7px solid rgba(0, 0, 0, 0);
  border-right: 7px solid rgba(0, 0, 0, 0);
  /*content: "";*/
  display: inline-block;
  left: 9px;
  position: absolute;
  top: -7px;
}

.navbar .nav > li > .dropdown-menu:after {
  border-bottom: 6px solid #FFFFFF;
  border-left: 6px solid rgba(0, 0, 0, 0);
  border-right: 6px solid rgba(0, 0, 0, 0);
  content: "";
  display: inline-block;
  right: 10px;
  position: absolute;
  top: -6px;
}

/************End index.html **************************/

body {
  padding-top: 0px;
  font-size: 13px;
  overflow-y: scroll;
  overflow-x: hidden;
  background-color: #e9e9ea;
/* background-color: #FBF9E2; */
/* background-color: #f5d7aa; */
}

.body-color {
  color: #FBF9E2;
}

/*.validation-invalid {*/
/*color: #FF4136;*/
/*}*/

/*************************************************All about table th, td, hover *************************/

/*.pagination {*/
/*text-align: center;*/
/*cursor: pointer;*/
/*}*/

/*******************************************************************************************************/

/*************************************************All about top navigation bar *************************/

/*************************************This controls the height,  padding, and border radius and space between(margin bottom) of all input elements******/
.form-horizontal
.control-label {
  padding: 5px;
}

.form-control {
  height: 30px;
  line-height: 20px;
  padding: 3px;
  font-size: 13px;
}

.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
  background-color: #ECF0F1;
  cursor: not-allowed;
  opacity: 1;
}

/*.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {*/
 /*padding-left: 15px;*/
 /*padding-right: 15px;*/
/*}*/

.form-horizontal .form-group {
  margin-bottom: 5px;
  margin-left: 10px;
}

/*textarea.form-control {*/
  /*height: 80px;*/
  /*width: 400px;*/
/*}*/

/************************************Other*************************************/

.row {
  margin-left: 0px;
  margin-right: 0px;
  margin-bottom: 5px;
}

.btn, btn-default {
  padding: 4px 15px;
}

.fa-asterisk {
  color: red;
}
/* ... */

